--- a/AmaanChat/Base.lproj/Main.storyboard
+++ b/AmaanChat/Base.lproj/Main.storyboard
@@ -28,6 +28,9 @@
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                     </view>
+                    <connections>
+                        <outlet property="pageScroll" destination="uC0-la-5Mr" id="MsP-Je-lOt"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
